[project]
name = "bike-sharing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.23.1",
    "httpx>=0.28.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.55",
    "langgraph>=0.3.32",
    "langgraph-cli[inmem]>=0.2.7",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]
